# tree-sitter-logstash

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test-2.conf  test-3.conf  test-file.conf  tree-sitter.json
bindings/c/: tree-sitter-logstash.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_logstash/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLogStash/: logstash.h
bindings/swift/TreeSitterLogStashTests/: TreeSitterLogStashTests.swift
src/: grammar.json  node-types.json  parser.c
